--- a/INFOHomework3.Rmd
+++ b/INFOHomework3.Rmd
@@ -1,17 +1,8 @@
 ---
-title: "R Notebook"
+title: "INFO 8000 Assignment #3/ Filtering through Turbulence Reports from January 2 "
 output: html_notebook
 ---
 
-This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
-
-Try executing this chunk by clicking the *Run* button within the chunk or by placing your cursor inside it and pressing *Ctrl+Shift+Enter*. 
-
-```{r}
-plot(cars)
-```
-
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
 
 When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Ctrl+Shift+K* to preview the HTML file).
 
@@ -43,6 +34,9 @@ cols(
 ```
 #Import CSV File
 
+
+Questions:
+1.) What type of commmerical aircraft has the most amount of Pilot Reports?
 ```{r}
 AircraftOnly <- PIREPS %>%
   select(AIRCRAFT)%>%
@@ -52,7 +46,7 @@ AircraftOnly <- PIREPS %>%
   barplot(DeltaPlanes2$Freq, main = "Reports by Type of Aircraft", xlab = "Aircraft Type", ylab = "Number of Reports", ylim = c(0,40000), names.arg = c("B717","B737", "B747", "B747", "B757"))
 ```
 #Filter Reports by 5 most popularly used commercial plane
-
+2.) Where are the majority of these pilot reports coming from?
 ```{r}
 PIREPS2<-read_csv("C:/Users/Nick Morgan/Desktop/Filteredstormattr_201701010000_201705010000.csv")
 LatLong <-data.frame(PIREPS2) %>%
@@ -73,7 +67,7 @@ ggmap(USA)+
 ```
 #Created Kernel Density Map
 #Defines areas where most reports have occured
-
+3.) Of those reports, which reports had turbulence reported as well?
 ```{r}
 testforturb<-data.frame(PIREPS, stringsAsFactors = FALSE) %>%
   filter(str_detect(PIREPS$REPORT,"TB"))
@@ -83,7 +77,7 @@ ggmap(USA)+ggtitle("Pilot Reports Indicating Turbulence")+
   geom_point(data = testforturb, aes(x = LON, y = LAT), color= "red", alpha = 0.1, size = 1)
 ```
 #Indicates Reports Where Turbulence Occured
-```
+4.) How many of these reports where of "Moderate" Intensity Turbulence
 ```{r}
 MODTurb<-data.frame(PIREPS, stringsAsFactors = FALSE) %>%
   filter(str_detect(PIREPS$REPORT,"MOD"))
@@ -91,5 +85,7 @@ MODTurb$LON <- as.numeric(as.character(MODTurb$LON))
 MODTurb$LAT <- as.numeric(as.character(MODTurb$LAT))
 ggmap(USA)+ggtitle("Pilot Reports Indicating MODERATE Turbulence")+
   geom_point(data = MODTurb, aes(x = LON, y = LAT), color= "black", alpha = 0.1, size = 1)
+```
+
 ```
 
